--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 * {
   margin: 0px;
   padding: 0px;
-  /* border: 0.5px solid red; */
 }
 
 body {
@@ -12,7 +11,7 @@ body {
 .main-content {
   height: 100%;
   display: grid;
-  grid-template-columns: 200px 1.5fr 4fr;
+  grid-template-columns: 2fr 4fr;
 }
 
 .main-content > div {
@@ -66,6 +65,7 @@ body {
   text-align: center;
   background-color: var(--resume-color);
   font-weight: 500;
+  padding: 2px 0px;
 }
 
 .sub-info {
@@ -103,4 +103,74 @@ body {
 .skills-container {
   display: flex;
   flex-direction: row;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.skill-item {
+  background-color: var(--resume-color);
+  border-radius: 20px;
+  padding: 4px;
+}
+
+/* Sidebar */
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 0px 20px;
+}
+
+.options {
+  position: relative;
+  z-index: -1;
+  top: -5px;
+  width: 80%;
+}
+.options button {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+}
+.settings {
+  left: 0px;
+}
+.main {
+  left: 40px;
+}
+
+.sidebar-item {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  border-radius: 20px;
+  border: 1px solid gainsboro;
+
+  min-width: 200px;
+  background-color: rgb(255, 255, 255);
+}
+
+label {
+  padding: 5px 0px;
+}
+
+input {
+  height: 20px;
+  background-color: #f1f1f1;
+  border-radius: 5px;
+  border: 1px solid gainsboro;
+  padding: 2px;
+}
+
+.sidebar-title {
+  font-weight: 600;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.sidebar-title button {
+  margin-left: auto;
 }
