--- a/src/App.css
+++ b/src/App.css
@@ -164,6 +164,11 @@ input {
   padding: 2px;
 }
 
+.input-field {
+  display: flex;
+  flex-direction: column;
+}
+
 .sidebar-title {
   font-weight: 600;
   font-size: 20px;
