--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,13 @@ body {
   display: flex;
   height: 100%;
   align-items: center;
-  justify-content: center;
 }
 
 /* Resume */
+
+.resume-section {
+  justify-content: center;
+}
 
 .resume {
   --gen-color: #becccc97;
@@ -120,6 +123,7 @@ body {
   flex-direction: column;
   gap: 20px;
   margin: 0px 20px;
+  margin-top: 50px;
 }
 
 .options {
