feat: education form user input updates edu data array

--- a/src/App.css
+++ b/src/App.css
@@ -156,6 +156,10 @@ body {
   background-color: rgb(255, 255, 255);
 }
 
+* {
+  transition: all 0.15s ease-out;
+}
+
 label {
   padding: 5px 0px;
 }
