--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,11 @@
   --darker-color: #3730a3;
 }
 
+html,
+#root {
+  height: 100vh;
+}
+
 body {
   height: 100%;
   width: 100%;
@@ -30,6 +35,7 @@ body {
 /* Resume */
 
 .resume-section {
+  align-items: center;
   justify-content: center;
 }
 
@@ -57,6 +63,10 @@ h3 {
 }
 
 /* Gen */
+
+.name {
+  min-height: 43px;
+}
 
 .general {
   min-height: 100px;
@@ -110,7 +120,6 @@ h3 {
 }
 
 .button-wrapper {
-  margin-left: auto;
   display: flex;
   gap: 5px;
   margin-top: 10px;
@@ -130,6 +139,7 @@ h3 {
 }
 
 .cancel {
+  margin-left: auto;
   color: var(--title-color);
 }
 
