--- a/src/App.css
+++ b/src/App.css
@@ -29,13 +29,11 @@ body {
 .main-content > div {
   display: flex;
   height: 100%;
-  align-items: center;
 }
 
 /* Resume */
 
 .resume-section {
-  align-items: center;
   justify-content: center;
 }
 
@@ -175,6 +173,7 @@ h3 {
   gap: 20px;
   margin: 0px 20px;
   margin-top: 50px;
+  align-items: center;
 }
 
 .options {
@@ -217,6 +216,14 @@ label {
 
 input {
   height: 20px;
+}
+textarea {
+  height: 200px;
+  resize: none;
+}
+
+input,
+textarea {
   background-color: #f1f1f1;
   border-radius: 5px;
   border: 1px solid gainsboro;
