--- a/src/App.css
+++ b/src/App.css
@@ -227,7 +227,6 @@ button:hover {
 }
 
 .nav {
-  width: 100%;
   display: flex;
   margin-left: 10px;
   padding: 20px;
@@ -263,6 +262,10 @@ button:hover {
 .skill-form,
 .exp-form {
   animation: n 0.8s ease;
+}
+
+.sidebar-item:last-child {
+  margin-bottom: 50px;
 }
 
 @keyframes n {
